changed some tags

--- a/TODO.txt
+++ b/TODO.txt
@@ -22,26 +22,26 @@ all debug flags off
  - install.sh
  - uninstall.sh
 
-GUI: blocks on call to apod_linux.py when clicking "apply"
-GUI: localize labels/buttons
-GUI: localize apod_linux.desktop
-GUI: desktop file (put in ~/.local/share/applications for current user
+NEXT: GUI: blocks on call to apod_linux.py when clicking "apply"
+NEXT: GUI: localize labels/buttons
+NEXT: GUI: localize apod_linux.desktop
+NEXT: GUI: desktop file (put in ~/.local/share/applications for current user
       or /usr/share/applications for all)
-GUI: update README for gui
-GUI: icon
-GUI: better icon for dock
-GUI: run from applications menu: shows up twice in plank
+NEXT: GUI: update README for gui
+NEXT: GUI: icon
+NEXT: GUI: better icon for dock
+NEXT: NEXT: UI: run from applications menu: shows up twice in plank
       first is labeled "APOD_Linux" goes away after a minute, one labeled
       "APOD_Linux config" stays until window closed
       first is for python launcher, second is for window?
-GUI: make pages for text color/bg color/other
+NEXT: GUI: make pages for text color/bg color/other
       or back to R/G/B/A spins
       wider not taller
-GUI: single instance
-GUI: icon not working in .desktop file(works in dock, not in app menu)
+NEXT: GUI: single instance
+NEXT: GUI: icon not working in .desktop file(works in dock, not in app menu)
 
-SOME: project/github folders (like a folder just for gui stuff)
-SOME: bottom space between text and background is too big (extra line?)
+NEXT: project/github folders (like a folder just for gui stuff)
+NEXT: bottom space between text and background is too big (extra line?)
       side padding is 0, but top/bottom is still like 5px (cant get rid of it)
 
 TODO: gather all todos from all files here
